<resources>
    <string name="app_name">OurSpace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ryan Brown</string>
    <string name="nav_header_subtitle">brownx452@umn.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="word_create">Create</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_support">Support</string>

    <string name="home_second">Home Second</string>
    <string name="music">Music</string>
    <string name="song_options">options …</string>
    <string name="song_name">song_name</string>
    <string name="song_url">song_url</string>
    <string name="music_title">Music</string>
    <string name="spotify">Spotify</string>
    <string name="default_image_view">Default Image View</string>

    <string name="family_wall">Family Wall</string>
    <string name="my_wall">My Wall</string>
    <string name="ask_help">Ask Help</string>

    <string name="add_tv_show">TV Show</string>
    <string name="add_music">Music</string>
    <string name="add_note">Note</string>
    <string name="add_image">Image</string>

    <string name="post">Post</string>
    <string name="take_new_picture">Take New Picture</string>

    <string name="song_label">Title</string>
    <string name="song_artist">Artist</string>

    <string name="title_activity_login">Ourspace</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome, "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="login_failed">"Invalid username or password"</string>
    <string name="invalid_password_2">"Password cannot be empty"</string>
    <string name="logout">"Logout"</string>

    <string name="tv_confirm_add">Add Show</string>
    <string name="tv_search_label">Enter a show name</string>
    <string name="tv_search_button">Search</string>
    <string name="tv_search_input_error">Please check your search term</string>

    <string name="create_tvshow">Create TV Show</string>
    <string name="create_note">Create Note</string>
    <string name="unicode_circle">●</string>
</resources>
