<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Wall For Me">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_group_white_24dp"
                    android:title="@string/family_wall" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_person_white_24dp"
                    android:title="@string/my_wall" />
            </menu>
        </item>

        <item android:title="@string/menu_support">
            <menu>
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_settings_white_24dp"
                    android:title="@string/action_settings" />
                <item
                    android:id="@+id/nav_askhelp"
                    android:icon="@drawable/ic_help_white_24dp"
                    android:title="@string/ask_help" />
            </menu>
        </item>

    </group>
</menu>
